@@ -10,6 +10,14 @@
 
 RELEASE 0.08 - 
 
+  From Zed Shaw:
+
+  - Add an Append() method to Environments, to append values to
+    construction variables.
+
+  - Change the name of Update() to Replace().  Keep Update() as a
+    deprecated synonym, at least for now.
+
 
 
 RELEASE 0.07 - Thu,  2 May 2002 13:37:16 -0500
